--- a/.github/workflows/dotnet.yml
+++ b/.github/workflows/dotnet.yml
@@ -21,6 +21,6 @@ jobs:
     - name: Restore dependencies
       run: dotnet restore
     - name: Build Windows
-      run: dotnet publish -c Release --runtime win-x64 --self-contained true --self-contained true --output "./build/win-x64"
+      run: dotnet publish -c Release --runtime win-x64 --self-contained --output "./build/win-x64"
     - name: Build Linux
-      run: dotnet publish -c Release --runtime linux-x64 --self-contained true --self-contained true --output "./build/linux-x64"
+      run: dotnet publish -c Release --runtime linux-x64 --self-contained --output "./build/linux-x64"
