--- a/DSRPackager.csproj
+++ b/DSRPackager.csproj
@@ -28,6 +28,7 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="DSRemapper.Core" Version="0.4.5-beta" />
     <PackageReference Include="System.CommandLine" Version="2.0.0-beta4.22272.1" />
   </ItemGroup>
 
